--- a/app/globals.css
+++ b/app/globals.css
@@ -4,46 +4,46 @@
 
 @font-face {
   font-family: "SpaceGrotesk";
-  src: url("assets/fonts/SpaceGrotesk-Bold.ttf");
+  src: url("../assets/fonts/SpaceGrotesk-Bold.ttf");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "SpaceGrotesk";
-  src: url("assets/fonts/SpaceGrotesk-SemiBold.ttf");
+  src: url("../assets/fonts/SpaceGrotesk-SemiBold.ttf");
   font-weight: 600;
   font-style: normal;
 }
 @font-face {
   font-family: "SpaceGrotesk";
-  src: url("assets/fonts/SpaceGrotesk-Medium.ttf");
+  src: url("../assets/fonts/SpaceGrotesk-Medium.ttf");
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
   font-family: "SpaceGrotesk";
-  src: url("assets/fonts/SpaceGrotesk-Regular.ttf");
+  src: url("../assets/fonts/SpaceGrotesk-Regular.ttf");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Satoshi";
-  src: url("assets/fonts/Satoshi-Bold.ttf");
+  src: url("../assets/fonts/Satoshi-Bold.ttf");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Satoshi";
-  src: url("assets/fonts/Satoshi-Medium.ttf");
+  src: url("../assets/fonts/Satoshi-Medium.ttf");
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
   font-family: "Satoshi";
-  src: url("assets/fonts/Satoshi-Regular.ttf");
+  src: url("../assets/fonts/Satoshi-Regular.ttf");
   font-weight: 400;
   font-style: normal;
 }
@@ -52,5 +52,16 @@
   html,
   body {
     @apply !font-spaceGrotesk;
+  }
+}
+
+@layer components {
+  .shadow-form {
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  .spinner-white .ub-w_16px .ub-a_1jfd7pm .ub-a_wxhuzj {
+    filter: invert(205%) sepia(103%) saturate(0%) hue-rotate(330deg)
+      brightness(500%) contrast(100%);
   }
 }
